--- a/style.css
+++ b/style.css
@@ -6,3 +6,8 @@ h1 {
     color: red;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+marquee {
+    color: red;
+    font-family: cursive;
+}
